Move playground handler to GraphQLApp

--- a/strawberry/contrib/starlette/templates/playground.html
+++ b/strawberry/contrib/starlette/templates/playground.html
@@ -539,7 +539,7 @@
       }
 
       GraphQLPlayground.init(root, {
-        endpoint: '/graphql',
+        endpoint: "{{REQUEST_PATH}}",
         codeTheme: colors,
       })
     })
